# identities-idns-api

./: Cargo.toml  README.md
crates/idns-ipfs/: Cargo.toml
crates/idns-ipfs/examples/: download.rs
crates/idns-ipfs/src/: downloader.rs  lib.rs  starter.rs
crates/ipfs-idns/: Cargo.toml
crates/ipfs-idns/src/: lib.rs
crates/micro-identities/: Cargo.toml  build.rs
crates/micro-identities/src/: lib.rs
crates/micro-identities/src/identity/: application.rs  attribute.rs  attribute_value.rs  identity.rs  meta_credential.rs  verifiable_credential.rs
crates/micro-keys/: Cargo.toml  build.rs
crates/micro-keys/examples/: login.rs
crates/micro-keys/src/: error.rs  lib.rs
crates/micro-keys/src/utils/: mod.rs
