[package]
name = "ipfs-idns-api"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1.15"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
futures = "0.3"
#IPFS
ipfs-api-backend-hyper = { version = "0.5", features = ["with-send-sync"] }